Alarma comunidad + Avance proyecto domo
Domotica en desarrollo
Alarma version pruebas internas

--- a/Meteor/homemonitor/client/Dash.html
+++ b/Meteor/homemonitor/client/Dash.html
@@ -1,15 +1,33 @@
 <template name="Dash">
 <h1 class="page-title">Mi Dashboard</h1>
-{{#each dispositivos}}
-	{{>MenuItem}}
-{{else}}
-	<h3> No existen <a href="/dispositivos">dispositivos</a> en tu dashboard</h3>
+ {{#each sector in sectores}}
+ <h3>{{sector.nombre}}</h3>
+	{{#each tipoDispositivo in tipoDispositivos}}
+		{{#each dispositivo in dispositivos sector._id tipoDispositivo._id}}
+			<div class="dash-item">
+				<i class="fa {{tipoDispositivo.icono}}"></i>
+				{{tipoDispositivo.nombre}}
+				<h3>{{dispositivo.nombre}}</h3>
+
+				{{#if tipoDispositivo.nombre = "ILUMINACION"}}
+					<button class="btn-deny toggle-btn">Prender</button> 
+				{{/if}}
+				{{#if tipoDispositivo.nombre = "TEMPERATURA"}}
+					<button class="btn-primary toggle-btn">Apagar</button> 
+				{{/if}}
+			</div>
+		<!--	{{> DashItem}}
+		{{else}}
+			<h3> No existen <a href="/dispositivos">dispositivos</a> en tu dashboard</h3>-->
+		{{/each}}
+	{{/each}}
 {{/each}}
+
 </template>
 
-<template name="MenuItem">
+<template name="DashItem">
 	<div class="menu-item">
-		<h3>{{nombre}}</h3>
-		<p>{{codigo}}</p>
+		<h3>{{this.nombre}}</h3>
+		<p>{{this.codigo}}</p>
 	</div>
 </template>
