--- a/Meteor/homemonitor/client/dispositivos/NuevoDispositivo.html
+++ b/Meteor/homemonitor/client/dispositivos/NuevoDispositivo.html
@@ -1,5 +1,6 @@
 <template name="NuevoDispositivo">
 <div class="new-recipe-containter">
+<h3>Nuevo Dispositivo</h3>
 <i class="fa fa-close"></i>
 	{{> quickForm collection="Dispositivos" id="insertDispositivoForm" type="insert" class="new-recipe-form"}}
 </div>
